Added `gunits-demo` and `generate` pages.

--- a/layoutunits.html
+++ b/layoutunits.html
@@ -1,3 +1,9 @@
+<template name="LunaLayout">
+	<body class="luna">
+		{{> yield}}
+	</body>
+</template>
+
 <template name="layoutunits">
 	<div class="tilegrid mod-fullpage">
 		{{#each photos}}
